<resources>
    <string name="stringAppName">BlueCapa</string>
    <string name="stringBleInitTitle">Bluetooth enable</string>
    <string name="stringListActivityTitle">Found devices</string>
    <string name="stringLogListActivityTitle">Log of device activity</string>
    <string name="stringListDeviceTitle">Device options</string>
    <string name="stringSettingsTitle">Settings</string>
    <string name="stringVideoRecordingTitle">Video recording</string>
    <string name="stringActionSettings">Settings</string>
    <string name="stringActionStartScanAddNew">Search for new devices</string>
    <string name="stringActionCleanAndScanNew">Clean current records and search again</string>
    <string name="stringActionShowList">Show advanced list of devices</string>
    <string name="stringActionShowAppAula">Show App EULA</string>
    <string name="stringBleNotSupported">Bluetooth low energy is not supported on this device. Try another one.</string>
    <string name="stringBleEnable">Please enable bluetooth</string>
    <string name="stringFileDialogAudio">Choose file please</string>
    <string name="stringButtonStopScanning">Stop scanning</string>
    <string name="stringButtonGoBack">Go back</string>
    <string name="stringButtonDeleteLogs">Delete logs</string>
    <string name="stringNotificationDisabledSwitch">Notification disabled</string>
    <string name="stringNotificationEnabledSwitch">Notification enabled</string>
    <string name="stringAudioEnabledSwitch">Audio enabled</string>
    <string name="stringAudioDisabledSwitch">Audio disabled</string>
    <string name="stringVibrateEnabledSwitch">Vibration enabled</string>
    <string name="stringVibrateDisabledSwitch">Vibration disabled</string>
    <string name="stringFlashLightEnabledSwitch">Flashlight enabled</string>
    <string name="stringFlashLightDisabledSwitch">Flashlight disabled</string>
    <string name="stringVideoRecordingDisabled">Video recording disabled</string>
    <string name="stringVideoRecordingEnabled">Video recording enabled</string>
    <string name="stringNameEditText">Name</string>
    <string name="stringAudioFile">Audio file</string>
    <string name="stringDeviceOptions">Device options</string>
    <string name="stringChooseMp3">choose mp3</string>
    <string name="stringDeleteAllYesNo">You have decided to delete all devices from list. Are you sure?</string>
    <string name="stringLogsDeleteAllYesNo">You have decided to delete all records from list. Are you sure?</string>
    <string name="stringYes">Yes</string>
    <string name="stringNo">No</string>
    <string name="string_BlueCapEventDetected">BlueCapa event detected</string>
    <string name="stringSettingsNotificationEnabled">Help notifications enabled</string>
    <string name="stringSettingsNotificationDisabled">Help notifications disabled</string>
    <string name="stringCardAdapterCursorException">"couldn't move cursor to position "</string>
    <string name="stringDBM">"dBm, "</string>
    <string name="stringVoltageComma">"V, "</string>
    <string name="stringDevice">"Device "</string>
    <string name="stringX">x</string>
    <string name="stringSelectPicture">Select Picture</string>
    <string name="stringToastBluetoothEnabled">BlueTooth is now Enabled</string>
    <string name="stringToastBluetoothCanceled">Error occurred while enabling.Leaving the application..</string>
    <string name="stringSelectDir">Select directory</string>
    <string name="stringRecordingDisabled">" - video recording disabled"</string>
    <string name="stringRecordingEnabled">" - video recording enabled"</string>
    <string name="stringFlashlightDisabled">" - flashlight disabled"</string>
    <string name="stringFlashlightEnabled">" - flashlight enabled"</string>
    <string name="stringNotificationDisabled">" - notification disabled,\nuse the LONG CLICK to access all time logs of this beacon"</string>
    <string name="stringNotificationEnabled">" - notification enabled,\nuse the LONG CLICK to access all time logs of this beacon"</string>
    <string name="stringVibrationDisabled">" - vibration disabled"</string>
    <string name="stringVibrationEnabled">" - vibration enabled"</string>
    <string name="stringAudioDisabled">" - playing audio disabled,\nuse the LONG CLICK to choose mp3 audio file"</string>
    <string name="stringAudioEnabled">" - playing audio enabled,\nuse the LONG CLICK to choose mp3 audio file"</string>
    <string name="stringStopListenToBeacons">Stopping listen to beacons</string>
    <string name="stringStartListenToBeacons">Starting listen to beacons</string>
    <string name="stringLowPower">Low power</string>
    <string name="stringBalanced">Balanced</string>
    <string name="stringLowLatency">Low latency</string>
    <string name="stringBlueCapService">BlueCapa service</string>
    <string name="stringListenToBeacons">listening to beacons broadcast</string>
    <string name="stringBlueCapServiceRunning">BlueCapa service is running in background</string>
    <string name="stringScanMode">Scan mode</string>
    <string name="stringLowLatencySetting">Low latency</string>
    <string name="string20s">20s</string>
    <string name="stringSettings">Settings</string>
    <string name="stringAudioDuration">Audio duration</string>
    <string name="stringVibrationDuration">Vibration duration</string>
    <string name="string6s">6s</string>
    <string name="stringFlashlightLightDuration">Flashlight light duration</string>
    <string name="string10s">10s</string>
    <string name="stringVideoRecordingDuration">Video recording duration</string>
    <string name="stringDateTime">date time</string>
    <string name="stringVoltage">Voltage</string>
    <string name="stringRssi">Rssi</string>
    <string name="stringMac">Mac</string>
    <string name="stringTitle">Title</string>
    <string name="stringCardPhoto">card photo</string>
    <string name="stringLast">Last</string>
    <string name="string0">0</string>
    <string name="stringIntensity">intensity</string>
    <string name="stringSignal">signal</string>
    <string name="stringBattery">battery</string>
    <string name="stringDelete">delete</string>
    <string name="stringPermissionGranted">Permission is granted to use bluetooth.</string>
    <string name="stringPermissionNotGranted">Permission is not granted so application will not work properly!</string>
    <string name="stringS">s</string>
    <string name="stringNoLogs">no time logs</string>
    <string name="stringChangeTitle">You can change the title with LONG CLICK on it</string>
    <string name="stringChooseNewImage">With LONG CLICK you can choose new image from gallery</string>
    <string name="stringDeleteSwipeIgnore">SHORT CLICK restore all the swiped out cards (ignored beacons)\nLONG CLICK permanently removes all beacons cards</string>
    <string name="stringUpdates"> </string>
</resources>